# josephus-viewer

./: CMakeLists.txt  LICENSE  README.md  compileAndRun.ps1  redoCmake.ps1
src/: main.cpp
src/UI/: app.cpp  app.h
